--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -4,6 +4,10 @@
  <strong>Day:</strong>
  <%= @plan.day %>
 </p>
+<p>
+ <strong>Time:</strong>
+ <%= @plan.time %>
+</p>
 
 <p>
  <strong>Place:</strong>
