--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ ul{
+display: flex;
+list-style: none;
+
+}
+
+
+
+@import "bootstrap";
+ @import "destinations";
