--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
-<h1>welcome to my app</h1>
+
+
+<blockquote class="blockquote text-center">
+<h2>About</h2>
+<p>...................................................................<br>
+........................................................................
+
+
+</p>
+</blockquote>
