--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,16 @@
   <h2>Welcome <%= current_user.email %></h2>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
   <%= link_to 'Change Password', edit_user_registration_path %><br>
+  <%= link_to 'Create your plan', new_destination_path %>
 
 <% else %>
+<div class="navbar navbar-light bg-light">
 
-  <%= link_to "Sign Up", new_user_registration_path %>
-  <%= link_to "Sign In", new_user_session_path %>
-
+<ul>
+ <div class= "btn btn-outline-success"> <%= link_to "Sign Up", new_user_registration_path %></div>
+ <div class="btn btn-outline-success"> <%= link_to "Sign In", new_user_session_path %></div>
+ </ul>
+</div>
 <% end %>
 
     <%= yield %>
