--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for @plan, url: {action: "update"} do |form| %>
     <p>
       <%= form.label :place %>
@@ -10,6 +12,6 @@
     </p>
    
     <p>
-      <%= form.submit %>
+      <%= form.submit "update" %>
     </p>
   <% end %>
