--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,18 @@
  ul{
 display: flex;
 list-style: none;
+// margin-left: 70%; 
 
 }
+
+.navbar li{
+    margin-left: 30px;
+}
+
+.blockquote{
+    margin-top:10%; 
+}
+
 
 
 
