--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 
- ul{
+ .navbar ul{
 display: flex;
 list-style: none;
 // margin-left: 70%; 
@@ -25,11 +25,55 @@ list-style: none;
     margin-left: 30px;
 }
 
-.blockquote{
-    margin-top:10%; 
+
+#new_plan{
+    border: 2px solid black;
+    // margin-left: 30%;
+    margin-top: -5%;
+    padding:50px;
 }
 
+.btn{
 
+    margin-left:30%; 
+}
+#tb{
+width: 50%;
+margin-right: 10%;
+margin-left: 2%
+
+}
+
+#tb1{
+    width: 50%;
+}
+
+#main{
+    display: flex;
+}
+
+#wel{
+    font-size: 20px;
+}
+
+#new_destination{
+    // text-align: center;
+    // width: 50%;
+    // margin-left:25% ;
+    // padding-top: 10%;
+    // padding-bottom:10%; 
+    // padding-right:1%; 
+    // padding-left:1%; 
+    // border: 2px solid tomato;
+    width: 33%;
+    background: rgba(255,255,255,.8);
+    padding: 4%;
+    box-shadow: 0 0 5px rgba(0,0,0,.75);
+    margin-left:30%;
+}
+.container-fluid{
+    font-size: 20px;
+}
 
 
 @import "bootstrap";
