--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,14 +1,10 @@
-
-
-
  <% @destinations.each do |p| %>
-   <br>
-    <td><%= link_to p.name, p %>|</td>
-    <td><%= link_to 'Edit', edit_destination_path(p) %></td>
-    <td><%= link_to 'Destroy', destination_path(p), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    <br>
-
-    
+  
+  <table id="tb1" class="container-fluid table table-hover table-dark">
+  <tbody>
+    <td><%= link_to p.name, destination_plans_path(p) %> | <%= link_to 'Edit', edit_destination_path(p) %> | <%= link_to 'Destroy', destination_path(p), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tbody>
+    </table>
 
  <% end %>
 
