--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -1,4 +1,6 @@
-<%= form_for @destination, url: {action: "create"} do |form| %>
+
+<div class="container">
+<%= form_for @destination,  url: {action: "create"} do |form| %>
     <p>
         <%= form.label :Add %>
         <%= form.text_field :name %>
@@ -12,6 +14,7 @@
       
      
       <p>
-        <%= form.submit %>
+        <%= form.submit "submit" , :class => 'btn btn-primary' %>
       </p>
     <% end %>
+    </div>
