--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,23 +17,26 @@
 
   
   <nav class="navbar ">
-  <h4>Welcome <%= current_user.email %></h4>
+  <h2>Trip Planner <br><span id="wel">Welcome <%= current_user.email %><span></h2>
+  
   <ul>
   <li> <%= link_to "Home  ", home_path %> </li>
   <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
   <li><%= link_to 'Change Password', edit_user_registration_path %></li>
+  <li><%= link_to 'New trip', new_destination_path %></li>
+  <li><%= link_to 'My trip', destinations_path %></li>
   
   </ul>
   </nav>
 
- <div class="blockquote text-center"> <%= link_to 'start Create your plan', new_destination_path %> </div>
+# <!--- <div class="blockquote text-center"> <%= link_to 'start Create your plan', new_destination_path %> </div>-->
 <% else %>
 
 <nav class="navbar ">
 <ul>
 <li> <%= link_to "Home  ", home_path %> </li>
  <li> <%= link_to "Sign Up  ", new_user_registration_path %> </li>
- <li> <%= link_to "  Sign In", new_user_session_path %></li>
+ <li> <%= link_to "Sign In", new_user_session_path %></li>
  </ul>
 </nav>
 <% end %>
