--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -13,6 +14,7 @@
  <strong>Place:</strong>
  <%= @plan.place %>
 </p>
+</div>
 
 
 
