--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -12,7 +12,7 @@
     </p>
    
     <p>
-      <%= form.submit "update" , :class => 'btn btn-primary'  %>
+      <%= form.submit "update"  %>
     </p>
   <% end %>
   </div>
