--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -11,7 +11,7 @@
     </p>
    
     <p>
-      <%= form.submit "update" , :class => 'btn btn-primary'  %>
+      <%= form.submit "update"  %>
     </p>
   <% end %>
   </div>
