--- a/app/assets/stylesheets/destinations.scss
+++ b/app/assets/stylesheets/destinations.scss
@@ -1,8 +1,11 @@
-.destinations.index{
-    background: rosybrown;
+// .destinations.index{
+//     body{
+//         background: rosybrown;
+//     }
+   
     
-        h1{
-            color:#fff;
-        }
+//         h1{
+//             color:#fff;
+//         }
     
-    }
+//     }
