--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
+<main id="main">
+<h1 class="slogan">The new way to plan <br> your next trip</h1>
+<div id ="container_width" class="container">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -29,3 +31,4 @@
 
 <%= render "devise/shared/links" %>
 </div>
+</main>
