--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 
 
 <blockquote class="blockquote text-center">
-<h2>About</h2>
-<p>...................................................................<br>
-........................................................................
+<h2 class="btn btn-lg btn-primary"><%= link_to 'Start planning', new_destination_path %></h2>
 
-
+<p></p>
+<p> Trip planner can help you to build your itinerary for your vacation <br>
+ you should enter where are you going and then you will be able to add what you will do into your itinerary
 </p>
 </blockquote>
