--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -10,9 +10,20 @@
       <%= form.label :Day %>
       <%= form.text_field :day %>
     </p>
+    <p>
+      <%= form.label :Date %>
+      <%= form.datetime_field :date %>
+    </p>
+    <p>
+      <%= form.label :Spending %>
+      <%= form.text_field :spending %>
+    </p>
+
+   
    
     <p>
       <%= form.submit "update"  %>
     </p>
   <% end %>
+
   </div>
