--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 
- .navbar ul{
+ @import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Indie+Flower|Saira+Extra+Condensed&display=swap'); .navbar ul{
 display: flex;
 list-style: none;
 // margin-left: 70%; 
@@ -23,6 +23,28 @@ list-style: none;
 
 .navbar li{
     margin-left: 30px;
+}
+
+.blockquote p{
+    font-family: 'Indie Flower', cursive;
+    font-size: 20px;
+    color:whitesmoke;
+}
+.navbar h1{
+    font-family: 'Gochi Hand', cursive;
+
+    font-size: 50px;
+    color: wheat;
+
+}
+.navbar a{
+    font-family: 'Gochi Hand', cursive;
+
+    // font-size: 50px;
+    // font-weight: bold;
+    font-size: 30px;
+    color: wheat;
+     text-shadow: 0 0 3px #FF0000, 0 0 5px #fff;
 }
 
 
@@ -38,9 +60,10 @@ list-style: none;
 //     margin-left:30%; 
 // }
 #tb{
-width: 50%;
+width: 65%;
 margin-right: 10%;
 margin-left: 2%
+
 
 }
 
@@ -54,6 +77,7 @@ margin-left: 2%
 
 #wel{
     font-size: 20px;
+    text-shadow: 0 0 3px #FF0000, 0 0 5px rgb(13, 15, 161);
 }
 
 #new_destination{
@@ -76,8 +100,10 @@ margin-left: 2%
     font-size: 20px;
 }
 .container{
-    width: 33%;
+    
     background: rgba(255, 255, 255, 0.8);
+    // background-image:url(1.jpg) ;
+    background-repeat: no-repeat;
     padding: 4%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
     margin-left: 30%;
@@ -85,5 +111,63 @@ margin-left: 2%
     margin-bottom: 20px;
 }
 
+#container_width{
+    width: 33%;
+}
+
+.btn  a{
+    color :white;
+}
+
+// header{
+//     display: flex;
+//     justify-content: space-between;
+//     /* flex-direction: row; */
+//     background-color:gray;
+//     color: white; 
+//     border-bottom:4px solid cyan;
+//     padding-left: 2%;
+//     padding-right:2%; 
+    
+    
+
+// }
+
+body{
+    // background-image:url(eiffel-tower.jpg) ;
+    // background-repeat: no-repeat;
+    // background-size:100% 200%;
+    // height: 100vh;
+    // width: 100vh;
+    background-position: center top;
+    background-size: cover;
+    background-image: url("beach.jpg");
+    background-repeat: no-repeat;
+    // min-height: 75%;
+    
+}
+.slogan{
+    margin-top: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+// header{
+//     display: flex;
+//     justify-content: space-between;
+//     background-image:url(world.jpg) ;
+//     /* flex-direction: row; */
+//     background-color:black;
+//     color: white; 
+//     border-bottom:4px solid yellow;
+//     padding-left: 2%;
+//     padding-right:2%; 
+    
+
+// }
+// header a {
+//     color:white;
+// }
+
 @import "bootstrap";
  @import "destinations";
+ @import "home";
