--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div id ="container_width" class="container">
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -15,4 +15,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-<div class="container">
+</div>
