--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,22 +1,34 @@
 <div class="container">
 <h1> <%= @destination.name %>  </h1>
-<h4>Travel Budget: <%= @destination.budget %></h4>
+<h4>Travel wallet: <%= @destination.budget %></h4>
+<% if @destination.budget.to_i < 0 %>
+<p>you spend more than you plan</p>
+<% end %>
+
+
 <main id="main">
-<table id="tb" class="table table-striped table-dark">
+<table id="tb" class="table">
 <thead>
 <tr>
   <th scope="col">Day</th>
+  <th scope="col">Date & time</th>
   <th scope="col">things to do</th>
-    <th scope="col">Time</th>
+    <th scope="col">Spending</th>  
+  
+
+    
 </tr>
 </thead>
 <tbody>
-<% @plans.order('day').each do |p| %>
+<% @plans.order('date').each do |p| %>
  
   <tr>
-  <td><%= p.day %></td>
+  <td> <%= p.day %></td>
+  <td><%= p.date %></td>
  <td> <%= p.place %></td>
- <td> <%= p.time %></td>
+ <td> <%= p.spending %></td>
+ 
+ 
 
  <td><%= link_to 'Show', destination_plan_path(p.destination_id,p) %></td>
   <td><%= link_to 'Edit', edit_destination_plan_path(p.destination_id,p) %></td>
@@ -31,16 +43,18 @@
 
 
   <%= form_for @plan, url: {action: "create"} do |form| %>
+    
     <p>
-      <%= form.label :Day %>
-      <%= form.text_field :day %>
+    <%= form.label :Day %>
+    <%= form.text_field  :day %>
+  </p>
+    <p>
+      <%= form.label :Date %> & Time
+      <%= form.datetime_field  :date %>
     </p>
 
 
-    <p>
-      <%= form.label :Time %>
-      <%= form.text_field :time %>
-    </p>
+    
 
     <p>
       <%= form.label :place %>
@@ -49,7 +63,7 @@
     </p>
  
     <p>
-      <%= form.submit %>
+      <%= form.submit "Add to itinerary" %>
     </p>
 <% end %>
 </main>
