--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -141,7 +141,7 @@ body{
     // width: 100vh;
     background-position: center top;
     background-size: cover;
-    background-image: url("beach.jpg");
+    background-image: url(beach.jpg);
     background-repeat: no-repeat;
     // min-height: 75%;
     
